minor bug squash

--- a/src/Components/cart/Cart.scss
+++ b/src/Components/cart/Cart.scss
@@ -75,6 +75,25 @@
             justify-content: space-between;
             margin-top: 2rem;
         }
+        .cta-btn-checkout {
+            position: relative;
+            margin-top: 2rem;
+            .cta-btn {
+                position: absolute;
+                left: 50%;
+                transform: translateX(-50%);
+                background-color: $banner_bg;
+                color: $color_white;
+                padding: 1.7rem 0;
+                border: 1px solid $nav_background;
+                cursor: pointer;
+                font-size: 2rem;
+                border-radius: .5rem;
+                text-decoration: none;
+                width: 28rem;
+                text-align: center;
+            }
+        }
     }
 }
 
